# anomaly_detection

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  models.py
core/: __init__.py  behavioral_model.py  features.py  inference.py  llm_explainer.py  models.py
models/: best_model.pt  fraud_detector.pkl  fraud_detector_autoencoder.pt
models/behavioral_fingerprint/: behavioral_fingerprint.pt  behavioral_fingerprint_trace.pt
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_behavioral_fingerprinting.ipynb  transaction_map.html  visualization.py
notebooks/models/: features.txt  fraud_detector.pkl  fraud_detector_autoencoder.pt
slides/: Technical Test - Devoteam - Kresna.pptx
tests/: test_api.py  test_features.py
utils/: gemini_client.py
